tablet foto, footer mob

--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -40,7 +40,7 @@
 
   .container-two {
     display: block;
-    padding-left: 60px;
+  
     align-items: center;
     gap: 16px;
   }
@@ -53,6 +53,7 @@
     color: #fff;
     margin-top: 72px;
     margin-bottom: 16px;
+    text-align: center;
   }
   .footer-media {
     max-width: 96px;
@@ -76,6 +77,7 @@
     display: flex;
     gap: 16px;
     margin-bottom: 72px;
+    justify-content: center;
   }
   .icon-social {
     width: 40px;
@@ -104,6 +106,7 @@
     line-height: 1.5; /* 150% */
     letter-spacing: 0.02em;
     margin-bottom: 16px;
+    text-align: center;
   }
   .footer-input-email {
     width: 288px;
@@ -139,6 +142,8 @@
     min-width: 165px;
     justify-content: center;
     align-items: center;
+    margin-right: auto;
+    margin-left: auto;
   }
   .footer-subscribe-svg {
     margin-left: 16px;
