--- a/css/layout/section-portfolio-four.css
+++ b/css/layout/section-portfolio-four.css
@@ -52,30 +52,24 @@
     .overlay {
         display: none;
     }
-
     .portfolio {
         flex-wrap: wrap;
         display: flex;
-        gap: 24px;
-
+        gap: 72px 24px;
     }
-
     .section-portfolio {
         background-color: var(--color-hero);
         padding-top: 72px;
     }
-
     .portfolio-dark {
         display: block;
         max-width: 100%;
         height: auto;
     }
-
     .portfolio-list {
         width: calc((100% - 72px) / 2);
 
     }
-
     .portfolio-name {
         font-size: 20px;
         font-weight: 500;
