--- a/css/layout/modal-window.css
+++ b/css/layout/modal-window.css
@@ -154,6 +154,8 @@
     color: #8e8f99;
     line-height: 1.17;
     width: 256px;
+    display: flex;
+    align-items: center;
   }
   
   .review-form-own-checkbox {
@@ -167,6 +169,7 @@
     cursor: pointer;
     fill: transparent;
     margin-right: 12px;
+    flex-shrink: 0;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
       border 250ms cubic-bezier(0.4, 0, 0.2, 1),
       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
