--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -2,8 +2,8 @@
   .footer {
     width: 100%;
     background-color: var(--color-primary);
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 96px;
+    padding-bottom: 96px;
   }
 
   .footer-logo {
@@ -21,6 +21,7 @@
     color: var(--color-light);
   }
   .footer-marketing {
+    text-align: left;
     max-width: 288px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -36,13 +37,14 @@
 
   .container-one {
     text-align: center;
+    margin-bottom: 72px;
   }
 
   .container-two {
     display: block;
-  
     align-items: center;
     gap: 16px;
+    margin-top: 72px;
   }
 
   .footer-social {
@@ -51,7 +53,6 @@
     line-height: 1.5; /* 150% */
     letter-spacing: 0.02em;
     color: #fff;
-    margin-top: 72px;
     margin-bottom: 16px;
     text-align: center;
   }
@@ -150,7 +151,7 @@
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1167px) {
+@media screen and (min-width: 768px) and (max-width: 1157px) {
   .footer {
     max-width: 100%;
     background-color: var(--color-primary);
@@ -281,7 +282,7 @@
   }
 
 }
-@media screen and (min-width: 1168px) {
+@media screen and (min-width: 1158px) {
   .footer {
     background-color: var(--color-primary);
     padding-top: 100px;
@@ -310,16 +311,16 @@
     letter-spacing: 0.02em;
     color: var(--color-light);
   }
-
+.container-one {
+  margin-right: 80px;
+}
   .cont-footer {
     display: flex;
     align-items: baseline;
   }
 
   .container-two {
-    padding-left: 60px;
-    align-items: baseline;
-    margin-right: 120px;
+    margin-right: 80px;
   }
 
   .footer-social {
@@ -406,7 +407,6 @@
     letter-spacing: 0.04em;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    margin-left: 24px;
     min-width: 165px;
     justify-content: center;
     align-items: center;
