--- a/css/layout/mobile-menu.css
+++ b/css/layout/mobile-menu.css
@@ -1,73 +1,80 @@
 .mobile-menu {
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 999999999;
-    width: 100%;
-    height: 100%;
-    background-color: #fff; 
-    padding: 0 16px;
-    transform: translateX(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  padding-top: 72px;
+  padding-left: 16px;
+  padding-bottom: 40px;
+  padding-right: 16px;
+  left: 0;
+  top: 0;
+  z-index: 999999999;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  transform: translateX(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mobile-menu.is-open {
-    transform: translateX(0%);
+  transform: translateX(0%);
 }
 
 .mobile-menu-close-btn {
-    position: absolute;
-    top: 24px;
-    right: 24px;
-    border: none;
-    background-color: transparent;
-    padding: 0;
-    line-height: 0;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  line-height: 0;
 }
 
 .mobile-menu-list {
-    display: flex;
-    padding-top: 72px;
-    padding-bottom: 168px;
-    flex-direction: column;
-    gap: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
 .mobile-menu-studio {
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 1.11; /* 111.111% */
-    letter-spacing: 0.02em;
-    text-transform: capitalize; 
-    color: #404bbf; 
-    
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11; /* 111.111% */
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #404bbf;
 }
 .mobile-menu-portfolio,
 .mobile-menu-contacts {
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 1.11; /* 111.111% */
-    letter-spacing: 0.02em;
-    text-transform: capitalize; 
-    color: #2e2f42; 
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.11; /* 111.111% */
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
+
+.mobile-soc {
+  margin-top: auto;
+}
+
 .contacts-mob {
-font-size: 20px;
-font-weight: 500;
-line-height: 1.2; /* 120% */
-letter-spacing: 0.02em;
-color: #4D5AE5;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2; /* 120% */
+  letter-spacing: 0.02em;
+  color: #4d5ae5;
 }
 .contacts-email {
-    font-size: 20px;
-font-weight: 500;
-line-height: 1.2; /* 120% */
-letter-spacing: 0.02em;
-color: #434455;
-padding-bottom: 24px;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2; /* 120% */
+  letter-spacing: 0.02em;
+  color: #434455;
+  padding-bottom: 24px;
 }
 .icon-list-mobile-menu {
-    display: flex;
+  display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top: 48px;
+  margin-top: 48px;
   gap: 40px;
 }
