--- a/css/layout/section-portfolio-four.css
+++ b/css/layout/section-portfolio-four.css
@@ -2,7 +2,6 @@
     .overlay {
         display: none;
     }
-
     .portfolio {
         display: block;
         max-width: 100%;
@@ -10,23 +9,18 @@
         column-gap: 24px;
         row-gap: 48px;
     }
-
     .section-portfolio {
         padding-top: 96px;
         padding-bottom: 96px;
     }
-
     .section-portfolio {
         background-color: var(--color-hero);
     }
-
     .portfolio-list {
         max-width: 100%;
         height: auto;
         padding-top: 42px;
-
     }
-
     .portfolio-name {
         font-size: 20px;
         font-weight: 500;
@@ -35,19 +29,16 @@
         color: var(--color-primary);
         margin-bottom: 8px;
     }
-
     .portfolio-description {
         line-height: 1.5; /* 150% */
         letter-spacing: 0.02em;
     }
-
     .portf {
         padding: 32px 16px;
         border: 1px solid #e7e9fc;
         border-top: none;
     }
 }
-
 @media screen and (min-width: 768px) {
     .overlay {
         display: none;
@@ -56,6 +47,7 @@
         flex-wrap: wrap;
         display: flex;
         gap: 72px 24px;
+        padding-bottom: 96px;
     }
     .section-portfolio {
         background-color: var(--color-hero);
@@ -78,51 +70,42 @@
         color: var(--color-primary);
         margin-bottom: 8px;
     }
-
     .portfolio-description {
         line-height: 1.5; /* 150% */
         letter-spacing: 0.02em;
     }
-
     .portf {
         padding: 32px 16px;
         border: 1px solid #e7e9fc;
         border-top: none;
     }
 }
-
-@media screen and (min-width: 1168px) {
+@media screen and (min-width: 1158px) {
     .portfolio {
         flex-wrap: wrap;
         display: flex;
         column-gap: 24px;
         row-gap: 48px;
     }
-
     .section-portfolio {
         padding-top: 120px;
         padding-bottom: 120px;
     }
-
     .section-portfolio {
         background-color: var(--color-hero);
     }
-
     .portfolio-list {
         width: calc((100% - 48px) / 3);
         transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-
     .portfolio-list:hover .overlay,
     .portfolio-list:focus .overlay {
         transform: translateY(0%);
     }
-
     .portfolio-dark {
         position: relative;
         overflow: hidden;
     }
-
     .overlay {
         display: block;
         font-size: 16px;
@@ -139,7 +122,6 @@
         transform: translateY(100%);
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-
     .portfolio-name {
         font-size: 20px;
         font-weight: 500;
@@ -148,12 +130,10 @@
         color: var(--color-primary);
         margin-bottom: 8px;
     }
-
     .portfolio-description {
         line-height: 1.5; /* 150% */
         letter-spacing: 0.02em;
     }
-
     .portf {
         padding: 32px 16px;
         border: 1px solid #e7e9fc;
