--- a/css/layout/section-team-three.css
+++ b/css/layout/section-team-three.css
@@ -1,8 +1,11 @@
 @media screen and (max-width: 767px) {
   .section-team {
     background-color: var(--color-light);
-   padding-top: 96px;
+    padding-top: 96px;
     padding-bottom: 120px;
+  }
+  .cont-team {
+    width: 296px;
   }
   .team-foto {
     display: block;
@@ -11,7 +14,6 @@
   }
   .team-list {
     background-color: var(--color-hero);
-   
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
       0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -91,11 +93,11 @@
   .team-foto {
     display: block;
     max-width: 100%;
+    margin: auto;
     height: auto;
   }
   .team-list {
     background-color: var(--color-hero);
-  width: 264px;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
       0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -167,8 +169,7 @@
     background-color: #31d0aa;
   }
 }
-
-@media screen and (min-width: 1168px) {
+@media screen and (min-width: 1158px) {
   .section-team {
     background-color: var(--color-light);
     padding-top: 120px;
@@ -193,6 +194,7 @@
   .team-foto {
     display: block;
     max-width: 100%;
+    margin: auto;
     height: auto;
   }
   .team-list {
