section hero and team

--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -49,6 +49,7 @@
     justify-content: space-between;
   }
   .tablet-menu {
+    font-size: 12px;
     display: block;
     gap: 12px;
     flex-direction: column;
