--- a/css/layout/modal-window.css
+++ b/css/layout/modal-window.css
@@ -403,7 +403,8 @@
     border-radius: 4px;
     border: none;
     text-align: center;
-    margin-left: 100px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 12px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
