--- a/css/layout/modal-window.css
+++ b/css/layout/modal-window.css
@@ -206,9 +206,8 @@
     border-radius: 4px;
     border: none;
     text-align: center;
-    margin-left: 59px;
-    margin-right: 60px;
-    margin-bottom: 24px;
+    margin-left: auto;
+    margin-right: auto;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
