--- a/css/layout/section-hero-one.css
+++ b/css/layout/section-hero-one.css
@@ -5,7 +5,7 @@
     padding-top: 72px;
     padding-bottom: 72px;
     background: var(--color-primary);
-    background-size: cover 320px 432px;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     background-image: linear-gradient(
@@ -72,7 +72,7 @@
     padding-top: 112px;
     padding-bottom: 112px;
     background: var(--color-primary);
-    background-size: cover 768px 436px;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     background-image: linear-gradient(
